[package]
name = "stories"
version = "0.0.2"
authors = [
  "Yomguithereal <guillaume.plique@sciencespo.fr>",
  "bmaz <beatrice.mazoyer@sciencespo.fr"
]
edition = "2018"
description = "Clustering of textual documents with time window"
documentation = "https://github.com/medialab/stories"
homepage = "https://github.com/medialab/stories"
repository = "https://github.com/medialab/stories"
readme = "README.md"
keywords = ["clustering", "NLP", "text"]
license = "Unlicense/MIT"
autotests = false

[dependencies]
bitintr = "0.3.0"
clap = { version = "3.2.23", features = ["derive"] }
chrono = "0.4.19"
chrono-tz = "0.4.1"
compound_duration = "1.2.0"
csv = "1.1"
indicatif = "0.16.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
rayon = "1.5"
regex = "1.5.4"
serde = { version = "1", features = ["derive"] }
sparseset = "1.0.0"
tab-hash = "0.3.0"
unidecode = "0.3.0"
